plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.4'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '21'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-logging'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-aop'
//	implementation 'org.springframework.boot:spring-boot-starter-security'

	//webSocket
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
//	implementation 'org.webjars:sockjs-client:1.5.1'
//	implementation 'org.webjars:stomp-websocket:2.3.4'
//	implementation 'org.springframework:spring-messaging:6.0.3'

	// s3
	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.638'

	//MYSQL
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
	runtimeOnly 'com.mysql:mysql-connector-j'
//	runtimeOnly 'mysql:mysql-connector-java:8.0.28'

	//Gson
	implementation 'com.google.code.gson:gson:2.8.8'

	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.3'
}

tasks.named('test') {
	useJUnitPlatform()
}
